upgraded to Java 21 and Spring Boot 3.5.x