@@ -3,7 +3,6 @@ package com.vsks.security.filter;
 import com.vsks.security.principal.UserPrincipal;
 import com.vsks.security.util.JwtTokenUtil;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.annotation.DependsOn;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -11,13 +10,12 @@ import org.springframework.security.web.authentication.WebAuthenticationDetailsS
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
-import javax.servlet.FilterChain;
-import javax.servlet.ServletException;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.util.Arrays;
-import java.util.stream.Collectors;
 
 @Component
 public class JwtTokenFilter extends OncePerRequestFilter {
@@ -30,7 +28,6 @@ public class JwtTokenFilter extends OncePerRequestFilter {
 
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain) throws ServletException, IOException {
-        String uri = request.getRequestURI();
         System.out.println("Filtering the URI " + request.getRequestURI());
         this.request = request;
         this.response = response;
@@ -54,12 +51,13 @@ public class JwtTokenFilter extends OncePerRequestFilter {
 
     private boolean hasAuthorizationBearer(HttpServletRequest request) {
         String header = request.getHeader("Authorization");
+        System.out.println("Header=" + header);
         return (null != header) && header.startsWith("Bearer");
     }
 
     private String getAccessToken(HttpServletRequest request) {
         String header = request.getHeader("Authorization");
-        String token = header.split(" ")[1].trim();
+        String token = header.split("\\s")[1].trim();
         return token;
     }
 
@@ -78,7 +76,7 @@ public class JwtTokenFilter extends OncePerRequestFilter {
         String jwtSubject = jwtTokenUtil.getSubject(token);
         userPrincipal.setUsername(jwtSubject.split("\\|")[0]);
         String roles = jwtSubject.split("\\|")[1];
-        userPrincipal.setAuthorities(Arrays.stream(roles.split(",")).collect(Collectors.toList()).stream().map(SimpleGrantedAuthority::new).collect(Collectors.toList()));
+        userPrincipal.setAuthorities(Arrays.stream(roles.split(",")).map(SimpleGrantedAuthority::new).toList());
         return userPrincipal;
     }
 
